fixed event and horizontal scroll because of breadcrumb

--- a/assets/sass/sections/agenda.sass
+++ b/assets/sass/sections/agenda.sass
@@ -129,6 +129,7 @@
                 margin-top: $spacing-2
             .hero-text
                 justify-content: start
+                row-gap: $spacing-3
             .taxonomies-single
                 margin-top: $spacing-2
             figure
@@ -138,6 +139,7 @@
                     img
                         aspect-ratio: 1
                         object-fit: cover
+                    width: 100%
 
     a.programme-btn
         @extend .button
